slightly change color

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -165,5 +165,6 @@
 base ="dark"
 primaryColor="#ecd60f"
 backgroundColor="#161618"
-secondaryBackgroundColor="#b12711"
+secondaryBackgroundColor="#b92f2f"
 textColor="#f3f2ee"
+
